force-app/main/default/objects/Cloud__c/Cloud__c.object-meta.xml
<CustomObject>
    <label>Cloud</label>
    <nameField>
        <label>cloud Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clouds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>