force-app/main/default/objects/Cloud__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Fifth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>