force-app/main/default/objects/Cloud__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>