force-app/main/default/objects/Cloud__c/fields/Marks__c.field-meta.xml
<CustomField>
    <fullName>Marks__c</fullName>
    <label>Marks</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>