force-app/main/default/objects/Cloud__c/fields/Pin_Number__c.field-meta.xml
<CustomField>
    <fullName>Pin_Number__c</fullName>
    <label>Pin Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>