force-app/main/default/objects/Cloud__c/fields/Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Sr_No__c</fullName>
    <displayFormat>Sr No-{0}</displayFormat>
    <label>Sr No</label>
    <type>AutoNumber</type>
</CustomField>